<resources>
    <string name="app_name">FrontEnd_Android</string>
    <string name="registro">Si no tienes un usuario puedes crearlo aqui</string>
    <string name="regstrarse">Sign In</string>
    <string name="Logear">Log In</string>
    <string name="usuario">User</string>
    <string name="contraseña">Password</string>
    <string name="menu1">Crear Fuente</string>
    <string name="menu2">Ver Fuentes</string>
    <string name="menu3">Borrar Fuente</string>
    <string name="menu4">Escribir Texto</string>
    <string name="menuCxt1">Cambiar contraseña</string>
    <string name="menuCxt2">Cerrar sesion</string>
    <string name="menuCxt3">Borrar cuenta</string>
    <string name="menuCxt4">Salir</string>
    <string name="menuCxt5">Preguntas Frecuentes</string>
    <string name="genParam1">Parametro vertical</string>
    <string name="genParam2">Parametro horizontal</string>
    <string name="generarFont">Crear Fuente</string>
    <string name="borrasel">Selecciona fuente a borrar</string>
    <string name="borrarFont">Borrar Fuente</string>
    <string name="GuardarText">Guardar como imagen</string>
    <string name="Transcribir">Transcribir texto</string>
    <string name="fuenteTrans">Usar fuente ya creada</string>
    <string name="fuenteTransNew">Usar fuente nueva</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Servidor">Inserte la IP del servidor</string>
    <string name="Sign_in">Comprobar y registrar</string>
    <string name="Succes_on_alta">Registro de usuario completado con exito</string>
    <string name="Fail_on_alta_datos">Usuario y/o contraseña introducidos incorrectos</string>
    <string name="pedirPass">Inserte su contraseña actual:</string>
    <string name="aceptar">Aceptar</string>
    <string name="newPass">Inserte su nueva contraseña:</string>
    <string name="modificarBien">Contraseña modificada con exito</string>
    <string name="borrarBien">Cuenta borrada con exito</string>
    <string name="confirmar">¿Estas seguro?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="propia">Como fuente personal</string>
    <string name="general">Como fuente general</string>
    <string name="guardar">Fuente guardada con exito</string>
    <string name="borrar">Fuente borrada con exito</string>
    <string name="nombrarFont">Introduzca un nombre para esta fuente</string>
    <string name="guardarText">Imagen guardada con exito</string>
    <string name="generales">General</string>
    <string name="propias">Propias</string>
    <string name="falloCarga">Fallo al cargar las fuentes</string>
</resources>
