<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:weightSum="10">

<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="4">
    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/fuenteTrans"
        android:textColor="@color/negro" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/negro"/>

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fuenteTransNew"
        android:textColor="@color/negro"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/genParam1"
        android:textColor="@color/negro" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:layout_weight="1"
        android:max="100"
        android:progress="3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/genParam2"
        android:textColor="@color/negro" />

    <SeekBar
        android:id="@+id/seekBar4"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:layout_weight="1"
        android:max="100"
        android:progress="3" />

</RadioGroup>
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_weight="1"
        />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:text="Lorem ipsum dolor sit amet"
        android:textColor="@color/negro"
        android:layout_weight="4"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Transcribir" />


</LinearLayout>