<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedirPass"
        android:textColor="@color/negro"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/negro"
        android:inputType="textPersonName"
        android:textColor="@color/negro"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPass"

        android:textColor="@color/negro"/>

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:backgroundTint="@color/negro"
        android:textColor="@color/negro"/>

    <Button
        android:id="@+id/button13"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar" />
</LinearLayout>