<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@color/negro"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/negro"
        android:inputType="textPersonName"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:textColor="@color/negro"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/negro"
        android:inputType="textPersonName"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        android:layout_margin="10dp"/>
</LinearLayout>